platform/prod/namespace-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app.kubernetes.io/part-of: devops-task
    environment: production
